--- a/style.css
+++ b/style.css
@@ -200,16 +200,8 @@ main{
     font-size: 16px;
     font-weight: 700;
 }
-.imagen1 {
-    width: 32px;
-    padding-left: 16px;
-
-}
 
 /* Aplicar margen izquierdo solo a habilidades excepto el primero */
-#skills .habilidad:not(:first-of-type) {
-    margin-left: 4px;
-}
 
 /* Estilos para el icono */
 .habilidad i {
@@ -539,7 +531,7 @@ main{
 }
 .contactoDerecho{
     width: 656px;
-    height: 593px;
+    height: auto;
 
 }
 .textoCaja{
@@ -1190,4 +1182,681 @@ footer p {
  #contacto .btnFormulario{
     margin-top: 32px;
  }
+}
+
+
+@media screen and (max-width: 361px) and (max-height: 4476px) {
+
+    body{
+        width: 361px;
+        height: 4476px;
+        margin: 0px;
+        padding: 0px;
+    }
+    header{
+        height: 56px;
+    }
+    .encabezadoPrincipal{
+        margin: 16px 0px 0px 0px;
+
+        width: 360px;
+        height: 24px;
+
+        padding: 0px;
+    }
+    .encabezadoPrincipalLogoyTexto {
+        width: auto;
+    }
+    .encabezadoPrincipal .topnav{
+        display: none;
+    }
+    .encabezado{
+        width: 360px;
+        height: 294px;
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+    .encabezadoSecundario{
+        width: 360px;
+        height: 148px;
+        order: 2;
+    }
+    main{
+        width: 360px;
+        height: 4317px;
+    }
+    .encabezadoSecundarioTexto{
+        height: auto;
+        width: 360px;
+    }
+    .encabezadoSecundarioTexto h1{
+        font-family: 'Raleway', sans-serif;
+        font-size: 22px;
+        line-height: 25.83px;
+        font-weight: 700;
+        margin: 0px;
+        margin-bottom: 12px;
+        width: 100%;
+    }
+
+    .encabezadoSecundarioTexto p{
+        font-family: 'Raleway', sans-serif;
+        font-size: 14px;
+        line-height: 16.44px;
+        font-weight: 400;
+        margin:0px;
+        width: 100%;
+    }
+    .linksExternos{
+        margin: 0px;
+        margin-left: 0px;
+    }
+    .encabezadoMiFoto{
+        width: 98px;
+        height: 98px;
+    }
+    .miFoto {
+        display: block;
+        height: 98px;
+        width: 98px;
+        border-radius: 50%;
+    }
+    #about{
+        width: 100%;
+        height: 350px;
+        margin: 0px;
+        padding: 0px;
+
+    }
+    #about .tituloSeccion{
+        width: 100%;
+        margin-left: 16px;
+
+    }
+    #about .parrafoSeccion h3{
+        font-family: "Raleway";
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 25.83px;
+    text-align: left;
+        }
+    #about .parrafoSeccion{
+        width: 100%;
+        height: auto;
+        margin-left: 16px;
+    }
+    #about .parrafoSeccion p{
+    width: 100%;
+    font-family: 'Raleway';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.44px;
+    text-align: left;
+    height: 100%;
+    }
+    #about .autografo{
+        margin-top: 16px;
+        margin-left: 16px;
+    }
+    #skills{
+        width: 360px;
+        height: auto;
+        margin: 0px;
+    }
+    #skills .tituloSeccion{
+        width: 100%;
+        margin: 16px 0px 0px 0px;
+    }
+    #skills .habilidadesSkills{
+        width: 360px;
+        margin-left: 0px;
+    }
+    #skills .habilidadesSkills .habilidad{
+        margin: 16px 0px 16px 16px;
+        padding: 0px;
+
+    }
+
+    #skills .habilidadesSkills .habilidad p{
+        margin: 0px;
+        padding: 0px;
+        width: 100%;
+        height: auto;
+        margin: 0px;
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18.78px;
+        text-align: left;
+    }
+    
+    #skills .habilidad{
+        width: 156px;
+        height: 118px;
+        margin: 16px;
+    }
+
+    #skills .habilidad .imagen1{
+        width: 40px;
+        height: 40px;
+        margin: 20% 60% 0px 0px;
+    }
+    #hobbies{
+        width: 100%;
+        height: auto;
+        margin: 0px;
+        padding: 0px;
+    }
+    #hobbies .tituloSeccion{
+        width: 100%;
+        margin: 16px 0px 0px 0px;
+    }
+
+    #hobbies .tituloSeccion h3{
+        width: 100%;
+        font-family: "Raleway";
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 25.83px;
+        text-align: center;
+
+    }
+    #hobbies .habilidades{
+        width: 100%;
+        height: auto;
+        margin-left: 16px;
+    }
+    #hobbies .habilidades .habilidad{
+        width: 156px;
+        height: 118px;
+        margin-bottom: 32px;
+    }
+    #hobbies .habilidades .habilidad .imagen1{
+        width: 32px;
+        height: 32px;
+        margin: 0px;
+        padding: 0px;
+        margin-right: 60%;
+        margin-top: 30%;
+    }
+    #hobbies .habilidades .habilidad p{
+        font-family: "Raleway";
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18.78px;
+        text-align: left;
+        margin: 0px;
+        padding: 0px;
+
+    }
+    #hobbies .habilidad:not(:first-of-type) {
+        margin-left: 0px;
+    }
+    #formacionSector{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 661px;
+        margin: 0px;
+        padding: 0px;
+    }
+    #formacionSector .tituloSeccion{
+        width: 100%;
+        margin: 0px;
+        margin-top: 32px;
+    }
+    #formacionSector .tituloSeccion h3{
+        width: 100%;
+        font-family: "Raleway";
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 25.83px;
+        text-align: center;
+
+
+    }
+    #formacionSector .formacionContainer{
+        width: calc(100% - 32px); /* Resta 32px del ancho total */
+        display: block;
+        margin-left: 32px;
+    }
+    #formacionSector .formacionContainer .formacion{
+        width: 296px;
+        height: 169px;
+        margin: 0px 0px 16px 0px;
+    } 
+
+    #formacionSector .formacionContainer .formacion .imagenFormacion{
+        width: 100%;
+        height: 118px;
+    }
+    #formacionSector .formacionContainer .formacion h3{
+        font-family: "Raleway";
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18.78px;
+        text-align: left;
+        margin: 8px 0px 8px 0px;
+        height: 19px;
+        width: fit-content;
+    }
+    #formacionSector .formacionContainer .formacion p{
+        font-family: "Raleway";
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 16.44px;
+        text-align: left;
+        margin: 0px;
+        height: 16px;
+        width: fit-content;
+
+    }
+    #experiencia{
+        width: 100%;
+        height: auto;
+        padding: 0px;
+        margin: 0px;
+    }
+    #experiencia  .experienciaTitulo{
+        font-family: Raleway;
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 25.83px;
+        text-align: center;
+        width: 100%;
+        margin-top: 32px;
+        margin-bottom: 8px;
+
+    }
+    #experiencia  .experienciaTitulo h3{
+
+        font-family: Raleway;
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 25.83px;
+        text-align: center;
+        width: 100%;
+
+    }
+
+    .bloque{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+        margin: 0px;
+    }
+    .experienciaIzquierda{
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        height: 144px;
+    }
+    .experienciaIzquierdaTitulo{
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        height: AUTO;
+    }
+    .experienciaIzquierdaBloque{
+        width: 100%;
+        height: 100%;
+    }
+    #experiencia .experienciaIzquierdaIzquierda{
+        height: 140px;
+        width: 50%;
+        background-color: #464646;
+        margin-right: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content:flex-start;
+    }
+    .experienciaDerecha{
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    #comentario{
+        width: 84%;
+        text-align: center;
+        margin-left: 16px;
+    }
+    .experienciaIzquierdaIzquierdaTitulo{
+        width: 100%;
+        text-align: center;
+        margin: 8px 0px 0px 0px;
+        padding: 0px;
+        
+    }
+    
+    #experiencia .experienciaIzquierdaIzquierdaTitulo p{
+        width: 100%;
+        text-align: center;
+        font-family: Raleway;
+        font-size: 0.7em;
+        line-height: auto;
+        
+    }
+    
+    #experiencia .experienciaIzquierdaDerecha{
+        width: 50%;
+        margin: 0px;
+        padding: 0px;
+        height: 140px;
+        display: flex;
+        flex-direction: column; /* Cambiamos la dirección del flex a columna */
+        align-items: center;
+        justify-content: flex-start;
+
+    }
+    #experiencia .experienciaIzquierdaDerecha #comentario{
+        margin: 0px;
+        padding: 0px;
+        width: 90%;
+        text-align: center;
+    }
+    #experiencia .experienciaIzquierdaDerecha .btnCopiar{
+        height: 16px;
+        text-align: center;
+        font-family: Raleway;
+        font-size: 12px;
+    }
+    .experienciaIzquierdaDerechaTitulo p{
+        margin: 16px 0px 5px 0px;
+        padding: 0px;
+        font-family: Raleway;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 12.78px;
+        text-align: left;
+
+    }
+    .experienciaIzquierdaIzquierdabotones{
+        width: 100%;
+        height: auto;
+        padding: 0px;
+        margin: 8px 0px 8px 4px;
+    }
+    .experienciaIzquierdaIzquierdabotones .btnEncriptar, .experienciaIzquierdaIzquierdabotones .btnDesencriptar{
+        width: 45%;
+        font-size: 0.6em;
+        height: 32px;
+    }
+    .experienciaDerechaBotones .btnRepositorio, .experienciaDerechaBotones .btnVerDemo{
+        width: 45%;
+        font-size: 0.6em;
+        height: 32px;
+    } 
+    #experiencia .experienciaIzquierdaDerecha .btnCopiar{
+        width: 50%;
+        font-size: 0.6em;
+        height: 32px;
+    }
+
+    #experiencia .btnCopiar{
+        margin: 8px 0px 0px 8px;
+    }
+
+    #experiencia .experienciaDerecha{
+        height: 91px;
+        margin-bottom: 0px;
+    }
+    #experiencia .experienciaDerechaTitulo{
+        height: 20px;
+        margin: 0px;
+        padding: 0px;
+    }
+    #experiencia .experienciaDerechaTitulo h3{
+        font-size: 16px;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .experienciaDerechaTexto p{
+        padding: 0px;
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: medium;
+        line-height: 16.44px;
+        text-align: left;
+        margin: 0px;
+    }
+    #experiencia .experienciaDerechaBotones{
+        width: 100%;
+        height: auto;
+    }
+
+    #experiencia .bloqueAhorcado{
+        width: 768px;
+        height: 427px;
+    }
+    #experiencia .experienciaIzquierdaBloqueAhorcado{
+        height: 91px;
+        width: 768px;
+        justify-content: flex-end;
+
+    }
+    
+    #comentario{
+        height: 26px;
+    }
+    #encriptador{
+        width: 90%;
+        margin: 8px;
+        padding: 0px;
+        height: 26px;
+    }
+    .bloqueAhorcado {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .experienciaDerechaAhorcado {
+        order: 1; /* Cambia el orden del elemento */
+        width: 100%;
+        padding: 0px;
+    }
+
+    .experienciaIzquierdaAhorcado {
+        order: 2; /* Cambia el orden del elemento */
+        width: 100%;
+        height: auto;
+    }
+    #experiencia .experienciaDerechaAhorcado {
+        display: flex;
+        flex-direction: row; /* Establece la dirección de los elementos como fila */
+        align-items:center; /* Alinea los elementos verticalmente */
+        justify-content: flex-start;
+        height: 320px;
+        width: 100%;
+        text-align: left;
+        background-color: white;
+        width: 768px;
+    }
+    
+    #experiencia .imagenAhorcado{
+        width: auto;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        margin-left: 32px;
+    }
+    #experiencia .experienciaDerechaTituloAhorcado{
+        width: 100%;
+        margin: 0px;
+    }
+    #experiencia .experienciaIzquierdaDerechaBotones {
+        display: flex;
+        justify-content:flex-start; /* Espacio uniformemente distribuido entre los elementos */
+        align-items: center; /* Alinea los elementos verticalmente en la misma línea de base */
+        padding: 0px;
+        margin-top: 32px;
+    }
+    #experiencia .experienciaDerechaTitulo h3{
+        margin-bottom: 0px;
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 16.44px;
+        text-align: left;
+
+    }
+    #experiencia .bloqueAhorcado{
+        width: 100%;
+        height: auto;
+    }
+    .experienciaDerechaAhorcado{
+        width: 100%;
+    }
+    #experiencia .imagenAhorcado{
+        margin: 0px;
+    }
+    #experiencia .experienciaIzquierdaBloqueAhorcado{
+        width: 100%;
+        height: auto;
+    }
+    #experiencia .experienciaIzquierdaBloqueAhorcado .experienciaIzquierdaIzquierda{
+        width: 100%;
+        height: auto;
+    }
+    
+    #experiencia .experienciaDerechaAhorcado{
+        width: 100%;
+    }
+    #experiencia .experienciaDerechaAhorcado .imagenAhorcado{
+        width: 50%;
+    }
+    #experiencia .experienciaDerechaAhorcado .experienciaDerechaTituloAhorcado{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    #experiencia .experienciaIzquierdaDerechaBotones{
+        width: calc(100% - 16px);
+        margin: 8px;
+
+    }
+
+    #experiencia .experienciaIzquierdaDerechaBotones .btnReiniciar , #experiencia .experienciaIzquierdaDerechaBotones .btnProbarSuerte{
+        width: 50%;
+        height: 32px;
+        font-size: 0.6em;
+        
+    } 
+    #experiencia .DibujoAhorcado{
+        width: 90%;
+        margin: 8px;
+    }
+    /* Establece el ancho al 10% para los elementos del 1 al 9 */
+    #experiencia .DibujoAhorcado [id^="dibujo"]:nth-child(-n+9) {
+        width: 12px;
+        padding: 0;
+        margin: 0;
+        aspect-ratio:1/1;
+}
+    #experiencia .ahorcadoTexto{
+        width: 90%;
+        margin: 8px;
+    }
+    #experiencia .ahorcadoTexto #ahorcado1,
+    #experiencia .ahorcadoTexto #ahorcado2,
+    #experiencia .ahorcadoTexto #ahorcado3,
+    #experiencia .ahorcadoTexto #ahorcado4,
+    #experiencia .ahorcadoTexto #ahorcado5,
+    #experiencia .ahorcadoTexto #ahorcado6,
+    #experiencia .ahorcadoTexto #ahorcado7,
+    #experiencia .ahorcadoTexto #ahorcado8,
+    #experiencia .ahorcadoTexto #ahorcado9{
+        width: 12px;
+        aspect-ratio:1/1;
+        margin: 0px;
+        padding: 0px;
+    }
+    .btnRepositorioAhorcado{
+        width: 50%;
+        height: 32px;
+        font-size: 0.6em;
+    }
+    .btnVerDemoAhorcado{
+        width: 45%;
+        height: 32px;
+        font-size: 0.6em;
+    }
+    .experienciaIzquierdaTituloAhorcado{
+        width: 100%;
+        margin: 8px 0px 8px 0px;
+    }
+    #contacto{
+        width: 100%;
+        height: auto;
+        margin: 0px;
+        padding: 0px;
+    }
+    #contacto .contactoIzquierdo{
+        width: 50%;
+        height: auto;
+        display: none;
+    }
+    #contacto .contactoImagen{
+        width: 100%;
+        aspect-ratio:1/1;
+    }
+    #contacto .contactoDerecho{
+        width: 100%;
+    }
+    #contacto .textoCaja{
+        width: 100%;
+        height: auto;
+        margin: 32px 0px 0px 32px;
+    }
+    #contacto .contactoDerecho{
+        width: 100%;
+    }
+    #contacto .contactForm{
+        width: 100%;
+        height: auto;
+        margin: 32px 0px 32px 32px;
+    }
+    #contacto #nombre1{
+        width: calc(100% - 64px);
+    }
+    #contacto #nombre2{
+        width: calc(100% - 64px);
+    }
+    #contacto #email1{
+        width: calc(100% - 64px);
+    }
+    #contacto #email2{
+        width: calc(100% - 64px);
+    }
+    #contacto #asunto{
+        width: calc(100% - 64px);
+    }
+    #contacto #mensaje{
+        width: calc(100% - 64px);
+    }
+    #contacto   .btnFormulario{
+        width: 37%;
+        height: 32px;
+        margin: 32px 0px 0px 0px;
+    }
+    .rodapie{
+        width: 100%;
+        aspect-ratio: 3/1;
+        display: flex;
+        justify-content: center; /* Centra horizontalmente */
+        align-items: center; /* Centra verticalmente */ 
+        margin: 0px;
+    }
+    .rodapie .textoRodapie{
+        font-family: "Raleway";
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 18.78px;
+        text-align: center;
+
+    }
 }
