--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 1136px;
-    height: 788px;
+    height: auto;
     background-color: #EAF2FD;
     padding-top: 64px;
     margin-top: 64px;
@@ -1160,12 +1160,12 @@ footer p {
     padding: 0px;
     margin: 0px;
     width: 100%;
-    height: 568px;
+    height: auto;
     margin-top: 32px;
 }
 #contacto .contactoIzquierdo{
     display: none;
-    height: 568px;
+    height: auto;
 }
 #contacto .contactoDerecho{
         width: 704px;
